2001-12-23  Masatake YAMATO  <yamato@redhat.com>

	* output-cgm.c (output_metafiledescription): Added `const'
	to UI8.
	(*): bool->at_bool.
	(output_cgm_writer): version_string->at_version.

	* Makefile.am (output_src): Added output-cgm.*.

2001-12-23  Martin Weber <martweb@gmx.net>

	* main.c (main): corrected bug that binary output was not 
	written correctly.

	* autotrace.[vcproj,dsp], output.c, output-cgm.[ch], Makefile.am: 
	added binary cgm export.

	(Message-ID: <3C250ADC.945F47F8@gmx.net>).

2001-12-23  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.c (at_version): Added parameter
	`long_format'.

	* .*: Remvoe bool and address types.

	* input-png.c: Use at_string instead of string.

	* Makefile.am (EXTRA_DIST): Added
	autotrace.sln autotrace.vcproj libming.sln libming.vcproj.

2001-12-23  Martin Weber <martweb@gmx.net>

	* libming.sln: New file.

	* libming.vcproj: Likewise.

	(Message-ID: <3C230B4F.AC6B7392@gmx.net>).

2001-12-23  Martin Weber <martweb@gmx.net>

	* main.c, fit.c, autotrace.[ch]: removed unnecessary 
	thin option.

	(Message-ID: <3C23097C.64BB84F8@gmx.net>,
	Message-ID: <3C230A3D.C0F29BE6@gmx.net>)
	
2001-12-23  Masatake YAMATO  <yamato@redhat.com>

	* input-png.h: string->at_string.

2001-12-23  Martin Weber <martweb@gmx.net>

        * (.*): Remove version num in comments.
	Use at_string instead of string.
	Change the data type for number.
	Remove decl of version_string. (e.g. unsigned -> unsigned short)

	* version.c: Include ptypes.h.

	* ptypes.h: Declare version_string. Remove at_string.

	* output-emf.c (OutputEmf, GetEmfStats): Initialized last_color.

	* output-dxf.c (output_layer, out_splines, out_splines): 
	Initialized local vars.

	* main.c (get_percent): Removed.

	* logreport.h: R.

	* logreport.c: R.

	* input-tga.h: P, R.

	* input-tga.c (tga_load_image): Remove a
	parameter `filename'.
	(tga_load_image): Likewise.

	* fit.c (filter_angle, find_curve_vectors): Removed.