@@ -1,4 +1,0 @@
-#include "ptypes.h"
-
-at_string version_string = "AutoTrace version " VERSION;
-
